--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1591,7 +1591,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f8fafc;
+  background-color: black;
 }
 
 [tabindex="-1"]:focus {
@@ -6514,10 +6514,11 @@ input[type=button].btn-block {
           flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: black;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border: 1px solid red;
   border-radius: 0.25rem;
+  color: red;
 }
 
 .card > hr {
@@ -8669,7 +8670,7 @@ button.bg-dark:focus {
 }
 
 .bg-white {
-  background-color: #fff !important;
+  background-color: black !important;
 }
 
 .bg-transparent {
