--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -1114,7 +1114,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: red;
   text-decoration: none;
 }
 a:hover,
@@ -2282,7 +2282,7 @@ th {
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid red;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
@@ -4409,8 +4409,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
+  background-color:black;
+  border-color: red;
 }
 .navbar-default .navbar-brand {
   color: #777;
@@ -8350,7 +8350,8 @@ body {
 #page-wrapper {
     padding: 0 15px;
     min-height: 568px;
-    background-color: #fff;
+      background-color: black;
+    
 }
 
 @media(min-width:768px) {
@@ -8358,6 +8359,7 @@ body {
         position: inherit;
         margin: 0 0 0 250px;
         padding: 0 30px;
+        color: red;
         border-left: 1px solid #e7e7e7;
     }
 }
