--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -1418,7 +1418,7 @@ a.bg-danger:hover {
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid red;
 }
 ul,
 ol {
@@ -2283,6 +2283,9 @@ th {
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid red;
+  border-color: red;
+  border-bottom: 1px solid red;
+  border:1px solid red ;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
