--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -1957,7 +1957,7 @@ pre code {
     width: 75%;
   }
   .col-md-8 {
-    width: 66.66666667%;
+    width: auto;
   }
   .col-md-7 {
     width: 58.33333333%;
@@ -4194,8 +4194,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   float: left;
   height: 50px;
   padding: 15px 15px;
-  font-size: 18px;
+  font-size: 30px;
   line-height: 20px;
+  color: white;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
@@ -4508,7 +4509,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
+  background-color: black;
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
@@ -5689,7 +5690,8 @@ a.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
+  color: white;
+  background-color: black;
   border: 1px solid #e3e3e3;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
@@ -8343,7 +8345,7 @@ button.close {
  */
 
 body {
-    background-color: #f8f8f8;
+    background-color: black;
 }
 
 #wrapper {
